--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "quote-genrator",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://<Username>.github.io/quote=genrator",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
